adding my assets

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Kevina Wong / Portfolio</title>
+    <title>Kaitlyn Huynh / Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -69,10 +69,9 @@
 
     <div class="container work-index">
         <div class="animate__animated animate__fadeIn">
-
             <div class="row">
                 <div class="one columns" id="home">
-                    <a href="index.html">
+                    <a href="../index.html">
                         <div class="logo" href="/">&nbsp</div>
                     </a>
                 </div>
@@ -106,7 +105,7 @@
         <a href="index.html">
             <div class="row">
                 <div class="typewriter">
-                    <h1>kevina wong</h1>
+                    <h1>kaitlyn huynh</h1>
                 </div>
             </div>
         </a>
@@ -115,7 +114,7 @@
             <div class="work-middle">
                 Welcome
             </div>
-            <img src="Images/IMG_2548.JPG"></img>
+            <img class = "centerimg" src="Images/coffee-shop.JPEG"></img>
         </div>
 
 
@@ -123,22 +122,9 @@
         <div class="work-index">
             <strong>About Me.</strong>
             <br></br>
-            Hello! my name is Kevina Wong [she/hers]. I am a B.S. computer science major and a business minor, and I
-            hope to use my knowledge in both to make an impact on the technology field some day.
+            Hello! My name is Kaitlyn Huynh. I'm currently a senior in the Creative Technology & Design program (formerly known as Technology, Arts & Media AKA TAM). I was born in Aurora, Colorado and have lived here ever since. I am an INFJ type, which is known as the Advocates type. INFJ stands for Introvert, Intuitive, Feeling and Judging. People with my personality type often strive to do the right thing and choose to focus on teamwork and cooperation. Their strength lies in communication and becauase of that, they're able to form strong and lasting relationships with others. I hope that this little introduction has given you some insight on what type of person I am and how I can work alongside others!
             <br></br>
-            After studying abroad for three weeks in Xi'an, China, I was immediately inspired by the universality of
-            technology. From there, I knew that my goal in the future is to work in technology on a global scale.
-            Furthermore, as a member of the Global Engineering Academic Program at my university, where I am able to
-            learn about the global impacts technology has on our society &mdash; good and bad. In this program, I am
-            also able to practice Chinese speaking skills with others in the program with the same language interest.
-            <br></br>
-            As a student from the University of Colorado at Boulder, I am proud to say that I am at a school that is
-            actively trying to close the gender gap and diversity gap in engineering and science. I am fortunate to have
-            many female peers and diverse peers to collaborate with. I am proud to say that I am an Asian-American woman
-            in STEM, and I hope to influence others to enter the field of engineering. In the Global Engineering Program
-            that I referred to earlier, I was also able to live among younger students in the program and mentor/guide
-            them in their path within engineering. Whether that may be tutoring or helping them pick classes, I was able
-            to guide them and share my experiences with them.
+            I'm passionate about front-end development and learning about the different frameworks and languages associate with it; the idea of combining UI/UX is with coding is something I heavily resonate with and reflects the values and skills I learned through my program at CU Boulder. Through my coursework and jobs, I've developed skills in Software Development, Mobile App Development, and Front-end Development that I hope to incorporate in my career. As someone passionate about Front-End development, I love learning about new and innovative ways to develop applications for all sorts of industries!
             <br></b>
         </div>
     </div>
