--- a/work/projects.html
+++ b/work/projects.html
@@ -113,23 +113,23 @@
                 <div class="work-index">click on the icon to learn more.</div>
                 <div class="row">
                     <div class="four columns 3d art ani">
-                        <a href="roboticsSwarm.html"><img src="../Images/sawrm.gif" /></a>
-                        <p class="work-thumb">Robotics Shape Swarm</p>
+                        <a href="roboticsSwarm.html"><img src="../Images/clothes.gif" class = "project-img"></a>
+                        <p class="work-thumb">Wonderful Weather Wardrobe</p>
                     </div>
                     <div class="four columns 3d art ani">
-                        <a href="encrypt.html"><img src="../Images/balloon.gif" /></a>
-                        <p class="work-thumb">Encrypt-To-Home</p>
+                        <a href="encrypt.html"><img src="../Images/desssert.gif" class = "project-img" /></a>
+                        <p class="work-thumb">Desserts! Desserts! Desserts!</p>
                     </div>
 
                 </div>
                 <div class="row">
                     <div class="four columns 3d art ani">
-                        <a href="recipe.html"><img src="../Images/food.gif" /></a>
-                        <p class="work-thumb">The BST Cookbook</p>
+                        <a href="recipe.html"><img src="../Images/seelie.gif" class = "project-img" /></a>
+                        <p class="work-thumb">Genshin App</p>
                     </div>
                     <div class="four columns 3d art ani">
-                        <a href="datascience.html"><img src="../Images/notebook.gif" /></a>
-                        <p class="work-thumb">Data Science Notebooks</p>
+                        <a href="datascience.html"><img src="../Images/snake.gif" class = "project-img"/></a>
+                        <p class="work-thumb">Villager Viewer</p>
                     </div>
                 </div>
 
