--- a/work/work.html
+++ b/work/work.html
@@ -9,7 +9,7 @@
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Kevina Wong / Portfolio</title>
+    <title>Kaitlyn Huynh / Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -69,9 +69,9 @@
         <div class="container work-index">
             <div class="row">
                 <div class="one columns" id="home">
-                    <a href="../index.html">
-                        <div class="logo" href="/">&nbsp</div>
-                    </a>
+                        <a href="../index.html">
+                            <div class="logo" href="/">&nbsp</div>
+                        </a>
                 </div>
                 <br></br>
                 <div class="nav-rt u-pull-right">
@@ -105,26 +105,26 @@
                 <div class="animate__animated animate__fadeIn">
                     <div class="row">
                         <div class="four columns">
-                            <p class="super_about">Kevina Wong &mdash; Learner, Thinker, Programmer &mdash; <br>Denver,
+                            <p class="super_about">Kaitlyn Huynh &mdash; Creative Technologist, Designer, Programmer &mdash; <br>Denver,
                                 CO</br></p>
 
-                            <p>In my sophomore year of college, I was able to travel to Xi'an, China as a study abroad
-                                program. I was exposed a different culture and rich history. There, I decided that I
-                                decided
-                                to work abroad one day. In a world where business is everything &mdash; and technology
-                                is
-                                the <strong>next</strong> everything. I want to be working in a position where I can
-                                apply
-                                both my business skills and technology skills on a global scale.
+                            <p>The first time I ever coded was my freshman year of college. Feeling lost and anxious, I
+                                panicked and switch to Computer Science on a whim. I was still a little uneasy when I 
+                                first started coding and learning about what it does. However, after seeing my first 
+                                "Hello World" pop up in the terminal got me excited and anticipating all the amamzing
+                                applications and websites I could build with just the keys in front of me. Of course,
+                                I ended up switching to a different major, but it just helped me realize my passion for 
+                                Front-end development. CTD is a major that aims to combine and unite the fields of art 
+                                and technology, and Front-end development lies at the intersection. I hope to use my unique
+                                skillset and perspective to change the tech industry.
                             </p>
 
-                            <p>As a current student, the field of computer science is still an open area of exploration.
-                                While I have a love for understanding and creating software, I have also found deep
-                                interests in Data Science and Robotics. My goal right now is to find an internship in
-                                any
-                                field of computer science so that I am able to dive into a specific field and find where
-                                I
-                                want to go.</p>
+                            <p>As a current student, the field of technology is still an open area of exploration.
+                                Fields that I'm particulary interested in is Front-end development as my passion lies in 
+                                learning different frameworks and languages to build UIs and applications that people all
+                                over the world can interact with. Full-stack development is another field I'm quite interested
+                                in since I love the process of builing a website/application from bottom up; the connection between 
+                                the two is important and something I would love to gain a deeper understanding of.</p>
 
                         </div>
 
@@ -136,10 +136,8 @@
                                 comes to
                                 my computer science and technology classes. I am someone who will stay up all night from
                                 the
-                                <strong>excitement</strong> of a project. Heck &mdash; I'm up in the middle of the night
-                                creating this very website!</br>
-                                <br></br>
-                                <strong>Detail</strong> <br>As someone who loves design and creation, I am truly
+                                <strong>excitement</strong> of a project.
+                                <br>As someone who loves design and creation, I am truly
                                 invested in
                                 details. I am someone who will produce carefully detailed deliverables and ensure that
                                 there
