--- a/work/resume.html
+++ b/work/resume.html
@@ -1,5 +1,5 @@
 <head>
     <link rel="icon" href="../Images/treestump.svg">
 
-    <embed src="../KevinaWong2020Resume.pdf" width="100%" height="100%" />
+    <embed src="../KaitlynHuynh_resume082022.pdf" width="100%" height="100%" />
 </head>
